# yap_fastapi

./: Dockerfile  README.md  endpoints.md  pyproject.toml  requirements.txt  setup.cfg
app/: main.py
app/api/v1/: api_utils.py  films.py  genres.py  persons.py
app/core/: config.py
app/middleware/: auth.py
app/models/: film.py  genre.py  person.py
app/services/: base.py  cache.py  elastic.py  films.py  genres.py  persons.py  redis.py  rediscache.py  service_utils.py
app/tests/: test1.py
app/tests/functional/: conftest.py  docker-compose.yml
app/tests/functional/config/: settings.py
app/tests/functional/src/: test_api_search.py  test_genre.py
app/tests/functional/testdata/: es_movies_schema.json  movies.json
etc/: list.es  local.esenv
src/: main.py
src/api/v1/: api_utils.py  films.py  genres.py  persons.py
src/core/: config.py
src/models/: film.py  person.py
src/services/: films.py  genres.py  persons.py
tests/functional/: .dockerignore  .env.example  Dockerfile  conftest.py  create_test_env.py  docker-compose.yml  get_test_data.py  pyproject.toml  requirements.txt
tests/functional/config/: logger.py  settings.py
tests/functional/src/: api_test_data.json  api_test_data.py  response.py  test_api_search.py  test_film.py  test_genre.py  test_person.py  test_search.py
tests/functional/testdata/: es_genres_schema.json  es_persons_schema.json  genres.json  persons.json
tests/functional/utils/: backoff.py  server_messages.py  service.py  structures.py  testdata.py  wait_for_es.py  wait_for_redis.py
