[tool.poetry]
name = "fastapi_a1"
version = "0.1.0"
description = ""
authors = ["Maxim B. <wedontask@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = {version = "8.1.2", extras = ["async"]}
fastapi = "0.61.1"
orjson = "3.4.1"
pydantic = "1.9.0"
uvicorn = "0.17.6"
uvloop = "0.14.0"
aioredis = "2.0.1"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"