[tool.poetry]
name = "fastapi_test"
version = "0.1.0"
description = ""
authors = ["Maxim B. <wedontask@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = {version = "8.1.2", extras = ["async"]}
pydantic = "1.9.0"
uvloop = "0.14.0"
aioredis = "2.0.1"
redis = "4.2.2"


[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
black = "^22.3.0"
locust = "^2.8.6"
aiohttp = "3.8.1"
pytest = "7.1.2"
pytest-asyncio = "0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --tb=short"
asyncio_mode="auto"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli="True"

